Archive2/a6/7a96015cdf9d30/output
main.cpp:1:22: error: extra tokens at end of #include directive
  #include <iostream> #include <iostream>
                      ^
main.cpp:2:23: error: extra tokens at end of #include directive
 #include <functional> #include <functional>
                       ^
main.cpp:3:19: error: extra tokens at end of #include directive
 #include <string> #include <string>
                   ^
main.cpp:17:1: error: stray '\303' in program
 public : público:
 ^
main.cpp:17:1: error: stray '\272' in program
main.cpp:6:3: error: expected unqualified-id before '{' token
 { {
   ^
main.cpp:9:5: error: multiple types in one declaration
 } ; };
     ^
main.cpp:11:32: error: declaration of 'class T'
 template < class T > template <class T>
                                ^
main.cpp:11:12: error:  shadows template parm 'class T'
 template < class T > template <class T>
            ^
main.cpp:12:7: error: too many template-parameter-lists
 class MyHash ; classe MyHash;
       ^
main.cpp:12:16: error: 'classe' does not name a type
 class MyHash ; classe MyHash;
                ^
main.cpp:15:7: error: 'MyHash' is not a class template
 class MyHash < S > classe MyHash <S>
       ^
main.cpp:15:7: error: too many template-parameter-lists
main.cpp:15:20: error: too many template-parameter-lists
 class MyHash < S > classe MyHash <S>
                    ^
main.cpp:24:6: error: extra ';' [-Wpedantic]
 } ; };
      ^
main.cpp:26:14: error: expected initializer before 'int'
 int main ( ) int main ()
              ^
